Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.14.0, Qt Creator 4.15.0-beta1
-
Fix Version/s: Qt Creator 4.15.0-rc1
-
Component/s: Project & Build Management: CMake
-
Labels:None
-
Environment:Debian 10 buster amd64
-
Commits:ca430f2a8b2ee7ea106d87bf517f1d4271d29b4b (qt-creator/tqtc-qt-creator/4.15)
Description
To reproduce:
- Create new Qt Console Project "Foo" for CMake.
- Click RMB on "Foo" target, select "Add new..."
- Select "C++ Class", enter any name ("Foo")
- In the wizard page with "Finish" button, it says (hint: two files):
Files to be added in /home/vincas/code/test/Foo: Foo.cpp Foo.h
- Click Finish, dialog box appears:
Files are not automatically added to the CMake.... Copy the path to the sorce files to the clipboard?
- Click Yes.
- Go to CMakeLists.txt, paste clipboard contents so that we get:
add_executable(Foo main.cpp Foo.cpp )
Note that we only got .cpp file, without .h. In the result, we don't see .h file in project explorer.
It would be useful if both .h and .cpp file names would be placed into clipboard, separated with space or newline.
Attachments
Issue Links
- duplicates
-
QTCREATORBUG-24301 Copy all file names when adding Form Class
-
- Closed
-