CMakePM: Copy the header file name to clipboard after adding class

Fixes: QTCREATORBUG-25212
Fixes: QTCREATORBUG-24301
Change-Id: Idf6104548223f6d26820bc395ee60c1a8c794c6d
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>